--- a/.travis.yml
+++ b/.travis.yml
@@ -4,26 +4,22 @@ os: osx
 osx_image: xcode10
 
 dotnet: 2.1.402
+mono: 5.12.0
 
 env:
   global:
     - ANDROID_COMPONENTS=build-tools-27.0.3,android-27,extra-android-support,extra-google-google_play_services,extra-google-m2repository,extra-android-m2repository
     - ANDROID_LICENSES=android-sdk-license-c81a61d9
-    #- MONO_VERSION=5.12.0
     - MONO_ANDROID_VERSION=9.0.0-20
     - MONO_IOS_VERSION=12.2.0.26
-
-mono: latest
 
 install:
   - curl -L https://raw.github.com/embarkmobile/android-sdk-installer/version-2/android-sdk-installer | bash /dev/stdin --install=$ANDROID_COMPONENTS --accept=$ANDROID_LICENSES
   - source ~/.android-sdk-installer/env
-  #- wget "http://download.mono-project.com/archive/${MONO_VERSION}/macos-10-universal/MonoFramework-MDK-${MONO_VERSION}.macos10.xamarin.universal.pkg"
-  #- sudo installer -pkg "MonoFramework-MDK-${MONO_VERSION}.macos10.xamarin.universal.pkg" -target /
   - wget "https://dl.xamarin.com/MonoforAndroid/Mac/xamarin.android-${MONO_ANDROID_VERSION}.pkg"
   - sudo installer -pkg "xamarin.android-${MONO_ANDROID_VERSION}.pkg" -target /
   - wget https://dl.xamarin.com/MonoTouch/Mac/xamarin.ios-$MONO_IOS_VERSION.pkg
-  - sudo installer -pkg "xamarin.ios-{$MONO_IOS_VERSION}.pkg" -target /
+  - sudo installer -pkg "xamarin.ios-${MONO_IOS_VERSION}.pkg" -target /
   - /Library/Frameworks/Mono.framework/Commands/nuget restore solution-name.sln
 
 script:
