Update test project to fix VS for Mac issue and mac building.

--- a/Twitchdeck.Test/Twitchdeck.Test.fsproj
+++ b/Twitchdeck.Test/Twitchdeck.Test.fsproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -11,6 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FSharp.Core" Version="4.5.2" />
+    <PackageReference Update="FSharp.Core" Version="4.5.2" /> <!-- workaround for VSMac bug https://github.com/mono/monodevelop/pull/5137 -->
     <PackageReference Include="Fabulous.Core" Version="0.22.0" />
     <PackageReference Include="FsCheck.Xunit" Version="2.11.0" />
     <PackageReference Include="FsUnit.xUnit" Version="3.2.0" />
