--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,20 @@
 # https://docs.microsoft.com/vsts/pipelines/languages/xamarin
 jobs:
+- job: Tests
+  pool:
+    vmImage: 'VS2017-Win2016'
+  variables:
+    buildConfiguration: 'Release'
+    outputDirectory: '$(build.binariesDirectory)/$(buildConfiguration)'
+  steps:
+    - task: DotNetCoreCLI@2
+      inputs:
+        command: test
+        projects: '**/*Tests/*.fsproj'
+        arguments: '--configuration $(buildConfiguration)'
+
 - job: Android
+  dependsOn: Tests
   pool:
     vmImage: 'VS2017-Win2016'
   variables:
@@ -18,6 +32,7 @@ jobs:
       configuration: '$(buildConfiguration)'
 
 - job: iOS
+  dependsOn: Tests
   pool:
     vmImage: 'macOS-10.13'
   variables:
