--- a/Twitchdeck.Test/Twitchdeck.Test.fsproj
+++ b/Twitchdeck.Test/Twitchdeck.Test.fsproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="TestHelpers.fs" />
     <Compile Include="UserInterfaceTests.fs" />
   </ItemGroup>
 
