Extracted TestHelperTests out of the TestHelpers

--- a/Twitchdeck.Test/Twitchdeck.Test.fsproj
+++ b/Twitchdeck.Test/Twitchdeck.Test.fsproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Compile Include="TestHelpers.fs" />
+    <Compile Include="TestHeplerTests.fs" />
     <Compile Include="UserInterfaceTests.fs" />
   </ItemGroup>
 
