--- a/Twitchdeck.iOS/Twitchdeck.iOS.fsproj
+++ b/Twitchdeck.iOS/Twitchdeck.iOS.fsproj
@@ -19,7 +19,7 @@
     </NuGetPackageImportStamp>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <RestorePackages>true</RestorePackages>
-    <SelectedDevice>iPhone X iOS 12.0</SelectedDevice>
+    <SelectedDevice>iPhone X</SelectedDevice>
     <TargetiOSDevice>&lt;?xml version="1.0" encoding="UTF-8"?&gt;
 &lt;!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd"&gt;
 &lt;plist version="1.0"&gt;
@@ -31,14 +31,14 @@
 		&lt;key&gt;model&lt;/key&gt;
 		&lt;string&gt;iPhone10,6&lt;/string&gt;
 		&lt;key&gt;os-version&lt;/key&gt;
-		&lt;string&gt;12.0&lt;/string&gt;
+		&lt;string&gt;12.0.1&lt;/string&gt;
 		&lt;key&gt;os&lt;/key&gt;
 		&lt;string&gt;iOS&lt;/string&gt;
 	&lt;/dict&gt;
 &lt;/dict&gt;
 &lt;/plist&gt;
 </TargetiOSDevice>
-    <DefaultDevice>iPhone X iOS 12.0</DefaultDevice>
+    <DefaultDevice>iPhone 5s iOS 12.0</DefaultDevice>
     <DeveloperId>
     </DeveloperId>
     <DevelopmentTeamId>
