--- a/Twitchdeck/Twitchdeck.fsproj
+++ b/Twitchdeck/Twitchdeck.fsproj
@@ -17,4 +17,7 @@
     <PackageReference Update="FSharp.Core" Version="4.5.2" /> <!-- workaround for VSMac bug https://github.com/mono/monodevelop/pull/5137 --> 
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Twitchdeck.OBSWebsockets\Twitchdeck.OBSWebsockets.fsproj" />
+  </ItemGroup>
 </Project>
