--- a/Twitchdeck.OBSWebsockets/Twitchdeck.OBSWebsockets.fsproj
+++ b/Twitchdeck.OBSWebsockets/Twitchdeck.OBSWebsockets.fsproj
@@ -9,6 +9,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FsCheck.Xunit" Version="2.12.0" />
+    <PackageReference Include="FSharp.Data" Version="3.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="System.Net.WebSockets.Client" Version="4.3.2" />
   </ItemGroup>
 
