--- a/Twitchdeck.Android/packages.config
+++ b/Twitchdeck.Android/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Fabulous.Core" version="0.22.0" />
-  <package id="Fabulous.LiveUpdate" version="0.22.0" />
+  <package id="Fabulous.Core" version="0.24.0" targetFramework="monoandroid81" />
+  <package id="Fabulous.LiveUpdate" version="0.24.0" targetFramework="monoandroid81" />
   <package id="FSharp.Core" version="4.5.2" />
   <package id="FSharp.Data" version="3.0.0" targetFramework="monoandroid81" />
   <package id="Newtonsoft.Json" version="11.0.2" />
@@ -9,7 +9,7 @@
   <package id="Xamarin.Android.Arch.Core.Runtime" version="1.0.0.1" />
   <package id="Xamarin.Android.Arch.Lifecycle.Common" version="1.0.3.1" />
   <package id="Xamarin.Android.Arch.Lifecycle.Runtime" version="1.0.3.1" />
-  <package id="Xamarin.Android.FSharp.ResourceProvider" version="1.0.0.25" />
+  <package id="Xamarin.Android.FSharp.ResourceProvider" version="1.0.0.28" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="27.0.2.1" />
   <package id="Xamarin.Android.Support.Annotations" version="27.0.2.1" />
   <package id="Xamarin.Android.Support.Compat" version="27.0.2.1" />
@@ -28,5 +28,5 @@
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="27.0.2.1" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="27.0.2.1" />
   <package id="Xamarin.Essentials" version="0.6.0-preview" />
-  <package id="Xamarin.Forms" version="3.1.0.697729" />
+  <package id="Xamarin.Forms" version="3.2.0.871581" targetFramework="monoandroid81" />
 </packages>
