--- a/Twitchdeck.iOS/packages.config
+++ b/Twitchdeck.iOS/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Fabulous.Core" version="0.22.0" targetFramework="xamarinios10" />
-  <package id="Fabulous.LiveUpdate" version="0.22.0" targetFramework="xamarinios10" />
+  <package id="Fabulous.Core" version="0.24.0" targetFramework="xamarinios10" />
+  <package id="Fabulous.LiveUpdate" version="0.24.0" targetFramework="xamarinios10" />
   <package id="FSharp.Core" version="4.5.2" />
+  <package id="FSharp.Data" version="3.0.0" targetFramework="xamarinios10" />
   <package id="Newtonsoft.Json" version="11.0.2" />
   <package id="Xamarin.Essentials" version="0.6.0-preview" />
-  <package id="Xamarin.Forms" version="3.1.0.697729" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="3.2.0.871581" targetFramework="xamarinios10" />
 </packages>
