Removed the linking for the release build. CI might like this a little more.

--- a/Twitchdeck.iOS/Twitchdeck.iOS.fsproj
+++ b/Twitchdeck.iOS/Twitchdeck.iOS.fsproj
@@ -98,6 +98,7 @@
     <ConsolePause>false</ConsolePause>
     <CodesignKey>iPhone Developer</CodesignKey>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
+    <MtouchLink>None</MtouchLink>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Ad-Hoc|iPhone' ">
     <DebugType>none</DebugType>
