--- a/Twitchdeck.OBSWebsockets/Twitchdeck.OBSWebsockets.fsproj
+++ b/Twitchdeck.OBSWebsockets/Twitchdeck.OBSWebsockets.fsproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Chiron" Version="6.3.1" />
     <PackageReference Include="FsCheck.Xunit" Version="2.12.0" />
     <PackageReference Include="FSharp.Data" Version="3.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
