--- a/Twitchdeck.OBSWebsockets/Twitchdeck.OBSWebsockets.fsproj
+++ b/Twitchdeck.OBSWebsockets/Twitchdeck.OBSWebsockets.fsproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Configurations>Debug;Release;Test</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,7 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Chiron" Version="6.3.1" />
-    <PackageReference Include="FsCheck.Xunit" Version="2.12.0" />
+    <PackageReference Include="FsCheck.Xunit" Version="2.12.1" />
     <PackageReference Include="FSharp.Data" Version="3.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="System.Net.WebSockets.Client" Version="4.3.2" />
