--- a/Twitchdeck.Test/Twitchdeck.Test.fsproj
+++ b/Twitchdeck.Test/Twitchdeck.Test.fsproj
@@ -4,6 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <Configurations>Debug;Release;Test</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,7 +18,7 @@
     <PackageReference Include="FSharp.Core" Version="4.5.2" />
     <PackageReference Update="FSharp.Core" Version="4.5.2" /> <!-- workaround for VSMac bug https://github.com/mono/monodevelop/pull/5137 -->
     <PackageReference Include="Fabulous.Core" Version="0.24.0" />
-    <PackageReference Include="FsCheck.Xunit" Version="2.12.0" />
+    <PackageReference Include="FsCheck.Xunit" Version="2.12.1" />
     <PackageReference Include="FsUnit.xUnit" Version="3.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
