--- a/Twitchdeck/Twitchdeck.fsproj
+++ b/Twitchdeck/Twitchdeck.fsproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Domain.fs" />
+    <Compile Include="Views.fs" />
     <Compile Include="Twitchdeck.fs" />
   </ItemGroup>
   <ItemGroup>
