We can tell if OBS is configured or not.

--- a/Twitchdeck.Test/Twitchdeck.Test.fsproj
+++ b/Twitchdeck.Test/Twitchdeck.Test.fsproj
@@ -11,7 +11,8 @@
   <ItemGroup>
     <Compile Include="TestHelpers.fs" />
     <Compile Include="TestHeplerTests.fs" />
-    <Compile Include="UserInterfaceTests.fs" />
+    <Compile Include="SceneUI.fs" />
+    <Compile Include="SetupUI.fs" />
   </ItemGroup>
 
   <ItemGroup>
