--- a/Twitchdeck.Android/Twitchdeck.Android.fsproj
+++ b/Twitchdeck.Android/Twitchdeck.Android.fsproj
@@ -27,8 +27,8 @@
     <RestorePackages>true</RestorePackages>
     <OtherFlags>/warnon:1182</OtherFlags>
     <WarningLevel>4</WarningLevel>
-    <SelectedDevice>HTC Nexus 9</SelectedDevice>
-    <DefaultDevice>tablet</DefaultDevice>
+    <SelectedDevice>twitchdeck</SelectedDevice>
+    <DefaultDevice>twitchdeck</DefaultDevice>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
