Revert all the updates that weren't needed Add Sound effects

--- a/Twitchdeck.OBSLink/Twitchdeck.OBSLink.fsproj
+++ b/Twitchdeck.OBSLink/Twitchdeck.OBSLink.fsproj
@@ -11,11 +11,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Twitchdeck.OBSWebsockets\Twitchdeck.OBSWebsockets.fsproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="FSharp.Core" Version="4.5.3" />
+    <PackageReference Update="FSharp.Core" Version="4.5.2" />
   </ItemGroup>
 
 </Project>
