--- a/Twitchdeck.iOS/packages.config
+++ b/Twitchdeck.iOS/packages.config
@@ -2,13 +2,13 @@
 <packages>
   <package id="Aether" version="8.3.1" targetFramework="xamarinios10" />
   <package id="Chiron" version="6.3.1" targetFramework="xamarinios10" />
-  <package id="Fabulous.Core" version="0.27.0" targetFramework="xamarinios10" />
-  <package id="Fabulous.CustomControls" version="0.27.0" targetFramework="xamarinios10" />
-  <package id="Fabulous.LiveUpdate" version="0.27.0" targetFramework="xamarinios10" />
+  <package id="Fabulous.Core" version="0.28.0" />
+  <package id="Fabulous.CustomControls" version="0.28.0" />
+  <package id="Fabulous.LiveUpdate" version="0.28.0" />
   <package id="FParsec" version="1.0.3" targetFramework="xamarinios10" />
-  <package id="FSharp.Core" version="4.5.3" targetFramework="xamarinios10" />
+  <package id="FSharp.Core" version="4.5.2" />
   <package id="FSharp.Data" version="3.0.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.NETCore.Platforms" version="2.1.2" targetFramework="xamarinios10" />
+  <package id="Microsoft.NETCore.Platforms" version="2.2.0" targetFramework="xamarinios10" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="xamarinios10" />
   <package id="Newtonsoft.Json" version="11.0.2" />
@@ -31,6 +31,7 @@
   <package id="System.Net.Http" version="4.3.4" targetFramework="xamarinios10" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="xamarinios10" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Reflection" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="xamarinios10" />
@@ -55,5 +56,5 @@
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="xamarinios10" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="Xamarin.Essentials" version="0.6.0-preview" />
-  <package id="Xamarin.Forms" version="3.4.0.1008975" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="3.1.0.697729" />
 </packages>
