--- a/Twitchdeck/Twitchdeck.fsproj
+++ b/Twitchdeck/Twitchdeck.fsproj
@@ -7,17 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="SFX.fs" />
     <Compile Include="Domain.fs" />
     <Compile Include="Views.fs" />
     <Compile Include="Twitchdeck.fs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
+    <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
     <PackageReference Include="Xamarin.Essentials" Version="0.6.0-preview" />
-    <PackageReference Include="Fabulous.Core" Version="0.27.0" />
-    <PackageReference Include="Fabulous.LiveUpdate" Version="0.27.0" />
+    <PackageReference Include="Fabulous.Core" Version="0.28.0" />
+    <PackageReference Include="Fabulous.LiveUpdate" Version="0.28.0" />
     <PackageReference Include="FSharp.Core" Version="4.5.2" />
-    <PackageReference Update="FSharp.Core" Version="4.5.3" /> <!-- workaround for VSMac bug https://github.com/mono/monodevelop/pull/5137 --> 
+    <PackageReference Update="FSharp.Core" Version="4.5.2" /> <!-- workaround for VSMac bug https://github.com/mono/monodevelop/pull/5137 --> 
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
   <ItemGroup>
